--- a/ExpenseTracker/template/accounts/login.html
+++ b/ExpenseTracker/template/accounts/login.html
@@ -2,25 +2,61 @@
 {% load static %}
 {% block content %}
 
-<div class="card">
+<link rel="stylesheet" href="{% static 'css/pagescss/login.css'%}" />
+
+
+<div class="logincard">
+  <div class="card border-primary mb-3" >
     <div class="card-body">
-        <form>
+        <form method="POST" action="{% url 'login' %}">
+
+
+            {% for message in messages %}
+            {% if "Error" in message %}
+            <div class="alert alert-danger">
+                <a class="close" href="#" data-dismiss="alert">×</a>
+
+                {{ message }}
+
+            </div>
+
+            {% else %}
+            <div class="alert alert-success">
+                <a class="close" href="#" data-dismiss="alert">×</a>
+
+                {{ message }}
+
+            </div>
+
+            {% endif %}
+
+          
+           {% endfor %}
+
+           {% csrf_token %}
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+              
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <input type="password" class="form-control" name="password" id="password" placeholder="Password">
             </div>
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            <div class="loginbutton" >
+              <button type="submit" class="btn btn-primary">Login</button>
+              
+       
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="registertag">    <a href="{% url 'register' %}" >Register Here</a></div>
+        
+
+
+        
           </form>
     </div>
   </div>
+</div>
 
-{%end block%}
+
+{%endblock%}
