--- a/ExpenseTracker/template/expense/home.html
+++ b/ExpenseTracker/template/expense/home.html
@@ -2,7 +2,70 @@
 {% load static %}
 {% block content %}
 
-<h1>Welcome to the home page you have logged in</h1>
+<div class="card" style="width: 18rem;">
+        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
+                Add Expense
+              </button>
+              <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action ">
+                      Cras justo odio
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+                    <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+                    <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+                    <a href="#" class="list-group-item list-group-item-action">Vestibulum at eros</a>
+                  </div>
+</div>
 
+
+      
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                    <form method="POST" action="{% url 'home'%}">
+
+                        {% csrf_token %}
+                            <div class="form-group">
+                              <label for="exampleFormControlInput1">Amount</label>
+                              <input type="number" class="form-control" id="amount" name="amount" placeholder="10">
+                            </div>
+                            <div class="form-group">
+                              <label for="exampleFormControlSelect1">Catagory</label>
+                              <select class="form-control" id="catagory" name="catagory">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                              </select>
+                            </div>
+                            <div class="form-group">
+                                    <label for="exampleFormControlTextarea1">Contents</label>
+                                    <textarea class="form-control" id="content" name="content" rows="3"></textarea>
+                                  </div>
+                        
+                            <div class="form-group">
+                              <label for="exampleFormControlTextarea1">Notes</label>
+                              <textarea class="form-control" id="notes" name="notes" rows="3"></textarea>
+                            </div>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Save Expense</button>
+            </div>
+            
+        </form>
+          </div>
+        </div>
+      </div>
 
 {%endblock%}
