--- a/ExpenseTracker/template/partials/navbar.html
+++ b/ExpenseTracker/template/partials/navbar.html
@@ -5,19 +5,40 @@
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        {% if user.is_authenticated %}
+
       <ul class="navbar-nav mr-auto">
-        <!-- <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li> -->
-    
+          <a class="nav-link" href="#">Leaderboards</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Insights</a>
+          </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Friends</a>
+          </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}" >Logout</a>
+        </li>
+        <form action="{% url 'logout' %}" method="POST" id="logout">
+
+            {%csrf_token%}
+            <input type="hidden">
+          </form>
      
       </ul>
+      {% else %}
+
+
+      {% endif %}
       <!-- <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
       </form> -->
+ 
     </div>
   </nav>
