--- a/ExpenseTracker/template/partials/navbar.html
+++ b/ExpenseTracker/template/partials/navbar.html
@@ -18,7 +18,7 @@
             <a class="nav-link" href="#">Insights</a>
           </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Friends</a>
+            <a class="nav-link" href="{% url 'friends' %}">Friends</a>
           </li>
 
         <li class="nav-item">
