--- a/ExpenseTracker/template/friends/index.html
+++ b/ExpenseTracker/template/friends/index.html
@@ -42,10 +42,25 @@
                 <h5 class="card-title">{{request.SentBy_id}} {{request.Status}}</h5>
                 <p class="card-text">{{request.DateTimeSent}}</p>
                 <button type="submit" class="btn btn-primary">Accept</button>
-                <input type="hidden" name="UserID" value="{{user.id}}">
+                <input type="hidden" name="UserID" value="{{request.SentBy_id}}">
             
               </div>
             </div>
           </form>
             {%endfor%}
+
+
+            <ul class="list-group">
+              <h3>My Friends</h3>
+                {% for friend in friends%}    
+              <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                                       
+                      <h5 class="card-title">{{friend.FriendID_id}} </h5>
+                      <p class="card-text">{{friend.FriendSince}}</p>
+                    </div>
+                  </div>
+             
+                  {%endfor%}
+
 {% endblock %}
