--- a/ExpenseTracker/template/friends/index.html
+++ b/ExpenseTracker/template/friends/index.html
@@ -64,29 +64,14 @@
                   </div>
              
                   {%endfor%}
-                  <div id="container"></div>
-  <script src="https://code.highcharts.com/highcharts.src.js"></script>
-  <script>
-    Highcharts.chart('container', {
-        chart: {
-            type: 'column'
-        },
-        title: {
-            text: 'Historic World Population by Region'
-        },
-        xAxis: {
-            categories: ['Africa', 'America', 'Asia', 'Europe', 'Oceania']
-        },
-        series: [{
-            name: 'Year 1800',
-            data: [107, 31, 635, 203, 2]
-        }, {
-            name: 'Year 1900',
-            data: [133, 156, 947, 408, 6]
-        }, {
-            name: 'Year 2012',
-            data: [1052, 954, 4250, 740, 38]
-        }]
-    });
-  </script>
+                  <div id="container" data-url="{% url 'chart_data' %}"></div>
+                  <script>
+                    $.ajax({
+                      url: $("#container").attr("data-url"),
+                      dataType: 'json',
+                      success: function (data) {
+                        Highcharts.chart("container", data);
+                      }
+                    });
+                  </script>
 {% endblock %}
