--- a/ExpenseTracker/template/expense/home.html
+++ b/ExpenseTracker/template/expense/home.html
@@ -125,6 +125,17 @@
             </div>
           </div>
 
+          <div id="container" data-url="{% url 'chart_data' %}"></div>
+          <script>
+            $.ajax({
+              url: $("#container").attr("data-url"),
+              dataType: 'json',
+              success: function (data) {
+                Highcharts.chart("container", data);
+              }
+            });
+          </script>
+
 {%endblock%}
 <script type="text/javascript">
   $(function () {
