--- a/ExpenseTracker/template/partials/navbar.html
+++ b/ExpenseTracker/template/partials/navbar.html
@@ -12,7 +12,7 @@
           <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Leaderboards</a>
+          <a class="nav-link" href="{% url 'leaderboards' %}">Leaderboards</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Insights</a>
@@ -20,10 +20,17 @@
         <li class="nav-item">
             <a class="nav-link" href="{% url 'friends' %}">Friends</a>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Hi {{user.get_full_name }}
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="javascript:{document.getElementById('logout').submit()}">Logout</a>
+            </div>
+          </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}" >Logout</a>
-        </li>
+         
+       
         <form action="{% url 'logout' %}" method="POST" id="logout">
 
             {%csrf_token%}
