--- a/ExpenseTracker/template/expense/home.html
+++ b/ExpenseTracker/template/expense/home.html
@@ -53,10 +53,11 @@
                   </div>
 </div>
 
+<!-- style="margin-top:-700px;margin-left:600px; width:500px;" -->
+<div id="container" class="container" ></div>
 
-<div id="container" class="container" style="margin-top:-700px;margin-left:600px; width:500px;"></div>
-
-<div id="container1" class="container1" style="margin-left:600px;width:700px;"></div>
+<!-- style="margin-left:600px;width:700px;" -->
+<div id="container1" class="container1" ></div>
 
 
 
