added bar chart to leaderboards

--- a/ExpenseTracker/template/expense/home.html
+++ b/ExpenseTracker/template/expense/home.html
@@ -53,11 +53,11 @@
                   </div>
 </div>
 
-<!-- style="margin-top:-700px;margin-left:600px; width:500px;" -->
+<!--  style="position: absolute; margin-left:600px; width:500px;" -->
 <div id="container" class="container" ></div>
 
-<!-- style="margin-left:600px;width:700px;" -->
-<div id="container1" class="container1" ></div>
+<!-- style="position: absolute; margin-left:600px;width:700px;" -->
+<div id="container1" class="container1"  ></div>
 
 
 
