--- a/ExpenseTracker/template/accounts/register.html
+++ b/ExpenseTracker/template/accounts/register.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="{% static 'css/pagescss/register.css'%}" />
 
 
-<div class="regitercard">
+<div class="registercard">
   <div class="card border-primary mb-3" >
       
       
