--- a/ExpenseTracker/ExpenseTracker/static/css/pagescss/home.css
+++ b/ExpenseTracker/ExpenseTracker/static/css/pagescss/home.css
@@ -46,12 +46,31 @@ and (orientation : portrait) {
 /* 1366 by 768 Most Used Screen*/
 @media only screen
 and (min-width : 1301px) and (max-width:1380px) {
-    .container{
-        margin-left:50px;
-        margin-top:0px;
+
+    .piecard{
+        position: absolute;
+        width: 800px;
+        margin-left:530px;
+        margin-top:10px;
     }
-
-
+    .linecard{
+        position: absolute;
+        width: 800px;
+        margin-left:530px;
+        margin-top:475px;
+    }
+    .expensecard{
+        position: absolute;
+        width: 500px;
+        margin-left:5px;
+        margin-top:230px;
+    }
+    .filtercard{
+        position: absolute;
+        width: 500px;
+        margin-left:5px;
+        margin-top:10px;
+    }
 }
 /* 1920 by 1080 2nd Most Used Screen*/
 @media only screen
@@ -80,6 +99,31 @@ and (min-width : 1150px) and (max-width:1300px) {
 /* 1536 by 864 6th Most Used Screen*/
 @media only screen
 and (min-width : 1535px) and (max-width:1598px) {
+
+    .piecard{
+        position: absolute;
+        width: 890px;
+        margin-left:600px;
+        margin-top:10px;
+    }
+    .linecard{
+        position: absolute;
+        width: 890px;
+        margin-left:600px;
+        margin-top:475px;
+    }
+    .expensecard{
+        position: absolute;
+        width: 570px;
+        margin-left:5px;
+        margin-top:225px;
+    }
+    .filtercard{
+        position: absolute;
+        width: 570px;
+        margin-left:5px;
+        margin-top:10px;
+    }
 
 }
 /* 1024 by 768 7th Most Used Screen*/
