--- a/ExpenseTracker/static/css/pagescss/home.css
+++ b/ExpenseTracker/static/css/pagescss/home.css
@@ -45,19 +45,12 @@ and (orientation : portrait) {
 
 /* 1366 by 768 Most Used Screen*/
 @media only screen
-and (min-width : 1301px) and (max-width:1380px) {  
-    .logincard {
-        width: 600px; 
-        margin-left:350px;
-        margin-top:160px;
+and (min-width : 1301px) and (max-width:1380px) {
+    .container{
+        width: 7000px;
+        margin-left:50px;
+        margin-top:0px;
     }
-    .loginbutton{
-        margin-left:230px;
-    }
-    .registertag{
-        margin-left:210px;
-    }
-
 }
 /* 1920 by 1080 2nd Most Used Screen*/
 @media only screen
@@ -71,6 +64,8 @@ and (min-width : 1801px) and (max-width:3000px) {
 and (min-width : 1381px) and (max-width:1539px) {
 
 }
+
+
 /* 1600 by 900 4th Most Used Screen*/
 @media only screen
 and (min-width : 1540px) and (max-width:1800px) {
@@ -84,21 +79,6 @@ and (min-width : 1150px) and (max-width:1300px) {
 /* 1536 by 864 6th Most Used Screen*/
 @media only screen
 and (min-width : 1535px) and (max-width:1598px) {
-
-    .logincard {
-        width: 700px; 
-        margin-left:420px;
-        margin-top:160px;
-    }
-    .loginbutton{
-        margin-left:300px;
-    }
-    .registertag{
-        margin-left:280px;
-    }
-
-
-
 
 }
 /* 1024 by 768 7th Most Used Screen*/
