--- a/ExpenseTracker/ExpenseTracker/static/css/pagescss/search.css
+++ b/ExpenseTracker/ExpenseTracker/static/css/pagescss/search.css
@@ -50,11 +50,11 @@ and (min-width : 1301px) and (max-width:1380px) {
         margin-left: 550px;
     }
   
-  .searchresults{
+  /* .searchresults{
       margin-left:350px;
       width: 550px;
      
-  }
+  } */
 }
 /* 1920 by 1080 2nd Most Used Screen*/
 @media only screen
@@ -82,7 +82,15 @@ and (min-width : 1150px) and (max-width:1300px) {
 @media only screen
 and (min-width : 1535px) and (max-width:1598px) {
 
- 
+    h1{
+        margin-left: 600px;
+    }
+
+  /* .searchresults{
+      margin-left:450px;
+      width: 600px;
+     
+  } */
 
 
 
