--- a/ExpenseTracker/template/partials/navbar.html
+++ b/ExpenseTracker/template/partials/navbar.html
@@ -9,13 +9,13 @@
 
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url 'home' %}">Dashboard <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'leaderboards' %}">Leaderboards</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Insights</a>
+            <a class="nav-link" href="{% url 'insight' %}">Insights</a>
           </li>
         <li class="nav-item">
             <a class="nav-link" href="{% url 'friends' %}">Friends</a>
